Fix SVG sizing on Safari

--- a/parliament/static/scss/_navigation.scss
+++ b/parliament/static/scss/_navigation.scss
@@ -94,8 +94,8 @@ $navbar_background_committees: #465f1b;
     }
     svg {
       height: 1.5rem;
+      width: 1.5rem;
       fill: #EEEEEE;
-      width: auto;
       padding-left: .25rem;
       vertical-align: middle;
       position: relative;
